fix print view result boxes aligning at bottom instead of top

--- a/styles.css
+++ b/styles.css
@@ -964,6 +964,7 @@ footer {
     
     .kitten-form {
         display: inline-block;
+        vertical-align: top;
         margin-bottom: 0;
         margin-top: 20px;
         margin-right: 20px;
